Refactor front end (#81)
* Install and update packages

- Installed `three`, `postprocessing`, `fiber`, `drei` for 3d model rendering.

- Installed `pixel-retroui` for retro style UI and pixel font.

- Updated react to react 19 for proper drei compatability.

* Create retro style button

* Create 3d object rendering and popup promts for registration, guest and normal login

* Refactor `Start.jsx` to use new UI react components.

- Refactored separate Login and Register pages to stylised popups.

* Color pallete change

* Add tailwind to packages

* Add more customization to`RetroButton` component

* Refactor `Home.jsx` with new design

- Implemented `Dropdown`  menu component

* Color change

* Refactor `Profile` and `LobbyPage`

* Refactor game page design

--- a/ClientApp/src/index.css
+++ b/ClientApp/src/index.css
@@ -1,3 +1,7 @@
+@import 'pixel-retroui/dist/index.css';
+@import 'pixel-retroui/dist/fonts.css'; /* optional — for the “Minecraft” / pixel font */
+@import "tailwindcss";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -5,7 +9,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #0e081d;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -36,7 +40,7 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  /* border-radius: 8px; */
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -51,7 +55,7 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: none /*4px auto -webkit-focus-ring-color*/;
 }
 
 @media (prefers-color-scheme: light) {
